--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,9 +3,10 @@
 	<header>
 		<meta charset='utf-8'>
 		<title>Mellon</title>
+        <link rel="stylesheet" href="./css/mellon.css">
 	</header>
 	<body>
 		<section id='react'></section>
-		<script src='/js/app.js'></script>
+		<script src='./js/bundle.js'></script>
 	</body>
 </html>
