add basic local hop socket connection

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,5 +8,6 @@
 	<body>
 		<section id='react'></section>
 		<script src='./js/bundle.js'></script>
+		<script src='/socket.io/socket.io.js'></script>
 	</body>
 </html>
