--- a/client/scss/mellon.scss
+++ b/client/scss/mellon.scss
@@ -12,7 +12,7 @@ body {
             overflow-x: hidden;
             overflow-y: scroll;
             list-style-type: none;
-            font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+            font-family: ‘Lucida Console’, Monaco, monospace;
             font-weight: 300;
             font-size: 14px;
             line-height: 18px;
