--- a/client/scss/mellon.scss
+++ b/client/scss/mellon.scss
@@ -31,37 +31,15 @@ body {
                 margin-top: 5px;
             }
         }
-    }
 
-    .inputContainer {
-        width: 100%;
-        position: relative;
-        box-sizing: border-box;
-        padding: 10px;
-        height: 42px;
-        // background: #1a1a1a;
-        background-color: rgb(45,45,45);
-
-        input {
-            &:focus {
-                outline: none;
-            }
-            width: 100%;
-            box-sizing: border-box;
-
-            padding: 3px;
-            font-size: 12px;
-            color: #333333;
-            background: #f3f3f3;
-            border: 1px solid #ffffff;
-            border-radius: 3px;
-            -moz-border-radius: 3px;
-            -webkit-border-radius: 3px;
-            box-shadow: inset 0 0 15px rgba(0, 0, 0, 0.30);
-            -moz-box-shadow: inset 0 0 15px rgba(0, 0, 0, 0.30);
-            -webkit-box-shadow: inset 0 0 15px rgba(0, 0, 0, 0.30);
+        ::-webkit-scrollbar {
+            display: none;
         }
     }
+
+    @import 'devTools';
+    @import 'input';
+    @import 'characterInfo';
 
     .system, .echo {
         span {
