breaks aliases/triggers; use mustache instead

--- a/client/scss/devTools.scss
+++ b/client/scss/devTools.scss
@@ -1,9 +1,5 @@
-.devTools {
-    button {
-        margin-left: 5px;
-    }
-
-    button:first-child {
-        margin-left: 0;
+.mellon-nav {
+    .container {
+        width: auto;
     }
 }
