allow cleaner client side editing of aliases; triggers and config to follow

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,8 +1,11 @@
 <section id='react'></section>
+<script>
+    Mellon = {
+        triggers: {{{triggers}}},
+        aliases: {{{aliases}}},
+        config: {{{config}}}
+    };
+</script>
 <script src='./js/bundle.js'></script>
 <script src='/socket.io/socket.io.js'></script>
-<script>
-    triggers = {{{triggers}}};
-    aliases =  {{{aliases}}};
-    config =  {{{config}}};
-</script>
+
