add substitution support

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,7 +3,8 @@
     Mellon = {
         triggers: {{{triggers}}},
         aliases: {{{aliases}}},
-        config: {{{config}}}
+        config: {{{config}}},
+        substitutions: {{{substitutions}}}
     };
 </script>
 <script src='./js/bundle.js'></script>
