--- a/client/scss/mellon.scss
+++ b/client/scss/mellon.scss
@@ -22,6 +22,7 @@ body {
     .messageList {
         flex-grow: 1;
         width: 100%;
+        height: 100%;
         overflow-x: hidden;
         overflow-y: scroll;
         list-style-type: none;
@@ -39,6 +40,10 @@ body {
 
         li:not(:first-child) {
             margin-top: 5px;
+        }
+
+        &>span {
+            display: flex;
         }
     }
 
